# nexus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  nexus.toml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: pyproject.toml
config/nexus_config/: __init__.py
core/: pyproject.toml
core-rs/: Cargo.toml
core-rs/src/: bridge.rs  bus.rs  lib.rs
core/nexus/: __init__.py  main.py
docs/: index.md
modules/discord/: pyproject.toml
modules/discord/nexus_discord/: __init__.py
modules/twitch/: pyproject.toml
modules/twitch/nexus_twitch/: __init__.py
scripts/: dev.py  setup.sh
utils/: pyproject.toml
utils/nexus_utils/: __init__.py  line_break.py  logging.py
web/backend/: pyproject.toml
web/backend/nexus_web/: __init__.py
web/frontend/: package.json
