[workspace]
members  = ["core-rs"]
resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
license    = "MIT"
repository = "https://github.com/Elchi-Dev/nexus"

[workspace.dependencies]
pyo3        = { version = "0.22", features = ["extension-module"] }
tokio       = { version = "1",    features = ["full"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
tracing     = "0.1"
