[package]
name        = "nexus-core-rs"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
description = "nexus rust event bus — PyO3 bridge to the Python runtime"

[lib]
name       = "nexus_core_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace      = true
tokio.workspace     = true
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace   = true
