[project]
name            = "nexus-web"
version         = "0.1.0"
description     = "nexus web interface backend"
requires-python = ">=3.12"
dependencies    = ["nexus-core", "fastapi>=0.110", "uvicorn[standard]>=0.29", "websockets>=12.0"]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"
